fix box on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,19 +22,24 @@ a {
     position: relative;
 }
 
+
 .button-container {
-    position: relative;
     margin: 0 auto;
-        transition: box-shadow 0.3s ease-in-out, bottom 0.3s ease-in-out;
+    transition: box-shadow 0.3s ease-in-out, bottom 0.3s ease-in-out;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
     bottom: 0;
     position: relative;
-    width: 400px;
-
+    @include for-tablet-portrait-up {
+       width: 340px;
+    } 
+    @include for-tablet-landscape-up {
+       width: 390px;
+    }
     &:hover {
         box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
         bottom: 4px;
     }
+   
 
     header {
         width: 100%;
